[package]
name = "cronjob"
version = "0.2.15"
authors = ["b.wisman155 <b.wisman155@gmail.com>"]
description = "cronjob library for scheduling your methods"
license = "Apache-2.0"
repository = "https://github.com/TheUberCatman/cronjob"
keywords = ["cron", "schedule"]

[dependencies]
cron = "0.6.0"
chrono = "0.4.0"
